<resources>
    <string name="app_name">Blabla</string>
    <string name="mainfragment">MainFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="events">Events</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="signUp">Sign up</string>
    <string name="map">map</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="location">location</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="subscribe">subscribe</string>
</resources>