<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search" android:icon="@drawable/ic_baseline_search_24" android:title="@string/search" app:showAsAction="ifRoom" />
    <item android:id="@+id/settings" android:icon="@drawable/ic_baseline_settings_24"  android:title="@string/settings"  app:showAsAction="never" />
    <item android:id="@+id/loginOption" android:icon="@drawable/ic_baseline_login_24"  android:title="@string/login"  app:showAsAction="never" />
<!--    <item android:title="@string/more" android:icon="@drawable/ic_baseline_more_vert_24" app:showAsAction="always">-->
<!--        <menu>-->
<!--            <item android:id="@+id/settings" android:icon="@drawable/ic_baseline_settings_24"  android:title="@string/settings"  app:showAsAction="never" />-->
<!--            <item android:id="@+id/loginOption" android:icon="@drawable/ic_baseline_login_24"  android:title="@string/login"  app:showAsAction="never" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>